// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox should render options when user search option specified 1`] = `
.c11 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c11 * {
  fill-opacity: 1;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  cursor: pointer;
  padding: 0 1.6rem;
  min-height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #13181D;
  background-color: #ffffff;
}

.c4:hover {
  background-color: #eff2f4;
}

.c4 .c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 .c10 {
  margin-left: 1.6rem;
}

.c4 .c10 * {
  fill: #13181D;
}

.c3 {
  z-index: 1000;
  position: absolute;
  top: 5.6rem;
  left: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  box-sizing: border-box;
  box-shadow: 0 2px 8px #B0BCC8;
  border-radius: 0 0 0.4rem 0.4rem;
}

.c3 li:first-child {
  border-radius: 0;
}

.c3 li:last-child {
  border-radius: 0 0 0.4rem 0.4rem;
}

.c9 {
  width: 4rem;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: 0.2rem;
}

.c9 .c10 {
  cursor: pointer;
  font-size: 2rem;
}

.c9 .c10 * {
  fill: #607890;
}

.c9 .c10:hover {
  background: transparent;
  border-radius: 2.5rem;
}

.c7 {
  width: 4rem;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 .c10 {
  cursor: pointer;
  font-size: 2rem;
}

.c7 .c10 * {
  fill: #607890;
}

.c7 .c10:hover {
  background: #eff2f4;
  border-radius: 2.5rem;
}

.c7 .c10:hover * {
  fill: #303C48;
}

.c7::after {
  content: '';
  width: 1px;
  height: 2.4rem;
  background: #dfe4e9;
  display: none;
  margin-left: 0.5rem;
}

.c0 {
  width: 25.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  outline: none;
  box-sizing: border-box;
  height: 4rem;
  border: 0.1rem solid;
  border-radius: 2rem 2rem 0 0;
  border-bottom: 0.1rem solid;
  border-color: #98A7B7;
  border-radius: 4rem;
}

.c0 .c2 {
  box-shadow: none;
  border: none;
  box-sizing: content-box;
  left: -1px;
  border: none;
  padding-bottom: 0;
}

.c0 .c2::before {
  display: none;
}

.c0 .c2 li:last-child {
  border-radius: 0 0 1rem 1rem;
}

.c0 input {
  font-size: 1.4rem;
  line-height: 2.2rem;
  padding-left: 2rem;
}

.c0 .c2 {
  top: 3.8rem;
  border-radius: 0 0 2rem 2rem;
}

.c0 .c2 li {
  padding: 0 2rem;
}

.c0 .c2 li span {
  font-size: 1.4rem;
  line-height: 2.2rem;
}

.c0 .c2::before {
  width: 82%;
}

.c0 .c10 {
  padding: 0.2rem;
}

.c0:focus-within {
  border-color: #005AEE;
  box-shadow: 0px 2px 16px rgba(96,120,144,0.25);
}

.c0:focus-within .c8 .c10 * {
  fill: #005AEE;
}

.c0:hover {
  border-color: #607890;
  box-shadow: 0px 2px 8px rgba(96,120,144,0.25);
}

.c0:focus-within:hover {
  border-color: #005AEE;
  box-shadow: 0px 2px 16px rgba(96,120,144,0.25);
}

.c1 {
  background: transparent;
  color: #13181D;
  padding: 0;
  outline: none;
  border: 0 none;
  width: 13.6rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1::-webkit-input-placeholder {
  color: #607890;
}

.c1::-moz-placeholder {
  color: #607890;
}

.c1:-ms-input-placeholder {
  color: #607890;
}

.c1::placeholder {
  color: #607890;
}

.c1:focus::-webkit-input-placeholder {
  color: #C7D0D8;
}

.c1:focus::-moz-placeholder {
  color: #C7D0D8;
}

.c1:focus:-ms-input-placeholder {
  color: #C7D0D8;
}

.c1:focus::placeholder {
  color: #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      placeholder="search me"
    />
    <ul
      class="c2 c3"
    >
      <li
        class="c4"
        id="Dummy1-option"
      >
        <span
          class="c5 c6"
        >
          Dummy1 option
        </span>
      </li>
      <li
        class="c4"
        id="Dummy2-option"
      >
        <span
          class="c5 c6"
        >
          Dummy2 option
        </span>
      </li>
    </ul>
    <span
      class="c7"
    />
    <span
      class="c8 c9"
    >
      <svg
        class="c10 c11"
        data-testid="search-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M15.187 14.472h.79l4.24 4.26c.41.41.41 1.08 0 1.49-.41.41-1.08.41-1.49 0l-4.25-4.25v-.79l-.27-.28a6.5 6.5 0 0 1-5.34 1.48c-2.78-.47-5-2.79-5.34-5.59a6.505 6.505 0 0 1 7.27-7.27c2.8.34 5.12 2.56 5.59 5.34a6.5 6.5 0 0 1-1.48 5.34l.28.27zm-9.71-4.5c0 2.49 2.01 4.5 4.5 4.5s4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5-4.5 2.01-4.5 4.5z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SearchBox should render text box of specified size 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c3 {
  z-index: 1000;
  position: absolute;
  top: 5.6rem;
  left: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  box-sizing: border-box;
  box-shadow: 0 2px 8px #B0BCC8;
  border-radius: 0 0 0.4rem 0.4rem;
}

.c3 li:first-child {
  border-radius: 0;
}

.c3 li:last-child {
  border-radius: 0 0 0.4rem 0.4rem;
}

.c6 {
  width: 4rem;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: 0.2rem;
}

.c6 .c7 {
  cursor: pointer;
  font-size: 2rem;
}

.c6 .c7 * {
  fill: #607890;
}

.c6 .c7:hover {
  background: transparent;
  border-radius: 2.5rem;
}

.c4 {
  width: 4rem;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 .c7 {
  cursor: pointer;
  font-size: 2rem;
}

.c4 .c7 * {
  fill: #607890;
}

.c4 .c7:hover {
  background: #eff2f4;
  border-radius: 2.5rem;
}

.c4 .c7:hover * {
  fill: #303C48;
}

.c4::after {
  content: '';
  width: 1px;
  height: 2.4rem;
  background: #dfe4e9;
  display: none;
  margin-left: 0.5rem;
}

.c0 {
  width: 25.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  outline: none;
  box-sizing: border-box;
  height: 4rem;
  border: 0.1rem solid;
  border-radius: 2rem 2rem 0 0;
  border-bottom: 0.1rem solid;
  border-color: #98A7B7;
  border-radius: 4rem;
}

.c0 .c2 {
  box-shadow: none;
  border: none;
  box-sizing: content-box;
  left: -1px;
  border: none;
  padding-bottom: 0;
}

.c0 .c2::before {
  display: none;
}

.c0 .c2 li:last-child {
  border-radius: 0 0 1rem 1rem;
}

.c0 input {
  font-size: 1.4rem;
  line-height: 2.2rem;
  padding-left: 2rem;
}

.c0 .c2 {
  top: 3.8rem;
  border-radius: 0 0 2rem 2rem;
}

.c0 .c2 li {
  padding: 0 2rem;
}

.c0 .c2 li span {
  font-size: 1.4rem;
  line-height: 2.2rem;
}

.c0 .c2::before {
  width: 82%;
}

.c0 .c7 {
  padding: 0.2rem;
}

.c0:focus-within {
  border-color: #005AEE;
  box-shadow: 0px 2px 16px rgba(96,120,144,0.25);
}

.c0:focus-within .c5 .c7 * {
  fill: #005AEE;
}

.c0:hover {
  border-color: #607890;
  box-shadow: 0px 2px 8px rgba(96,120,144,0.25);
}

.c0:focus-within:hover {
  border-color: #005AEE;
  box-shadow: 0px 2px 16px rgba(96,120,144,0.25);
}

.c1 {
  background: transparent;
  color: #13181D;
  padding: 0;
  outline: none;
  border: 0 none;
  width: 13.6rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1::-webkit-input-placeholder {
  color: #607890;
}

.c1::-moz-placeholder {
  color: #607890;
}

.c1:-ms-input-placeholder {
  color: #607890;
}

.c1::placeholder {
  color: #607890;
}

.c1:focus::-webkit-input-placeholder {
  color: #C7D0D8;
}

.c1:focus::-moz-placeholder {
  color: #C7D0D8;
}

.c1:focus:-ms-input-placeholder {
  color: #C7D0D8;
}

.c1:focus::placeholder {
  color: #C7D0D8;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
      placeholder="Search"
    />
    <ul
      class="c2 c3"
    />
    <span
      class="c4"
    />
    <span
      class="c5 c6"
    >
      <svg
        class="c7 c8"
        data-testid="search-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M15.187 14.472h.79l4.24 4.26c.41.41.41 1.08 0 1.49-.41.41-1.08.41-1.49 0l-4.25-4.25v-.79l-.27-.28a6.5 6.5 0 0 1-5.34 1.48c-2.78-.47-5-2.79-5.34-5.59a6.505 6.505 0 0 1 7.27-7.27c2.8.34 5.12 2.56 5.59 5.34a6.5 6.5 0 0 1-1.48 5.34l.28.27zm-9.71-4.5c0 2.49 2.01 4.5 4.5 4.5s4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5-4.5 2.01-4.5 4.5z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
